// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Front Page A11y I can see the skip to content link 1`] = `"Waka go wetin de inside"`;

exports[`Canonical Front Page A11y I can see the skip to content link 2`] = `"Waka go wetin de inside"`;

exports[`Canonical Front Page Analytics ATI 1`] = `"<img height=\\"1px\\" width=\\"1px\\" alt=\\"\\" style=\\"position:absolute\\" src=\\"https://logws1363.ati-host.net?s=598343&amp;s2=70&amp;p=pidgin.page&amp;x1=[urn:bbc:cps:52f3c7b1-83ed-2338-e050-17ac8045cd94]&amp;x2=[responsive]&amp;x3=[news-pidgin]&amp;x4=[pcm]&amp;x7=[index-home]&amp;x8=[simorgh-nojs]&amp;x9=[Domot+-+BBC+News+Pidgin]&amp;x11=[1970-01-18T08:30:40.608Z]&amp;x12=[1970-01-19T01:24:09.011Z]\\"/>"`;

exports[`Canonical Front Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/pidgin"`;

exports[`Canonical Front Page Footer I can click on the BBC branding and it would take me to the homepage 2`] = `"/pidgin"`;

exports[`Canonical Front Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. De external site no concern BBC. De way wey we de take go external link."`;

exports[`Canonical Front Page Footer I can see the footer copyright and external linking text 2`] = `"© 2020 BBC. De external site no concern BBC. De way wey we de take go external link."`;

exports[`Canonical Front Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, Pidgin",
  "url": "/pidgin",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 2`] = `
Object {
  "text": "Why you fit trust BBC News",
  "url": "https://www.bbc.com/pidgin/institutional-48528766",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 3`] = `
Object {
  "text": "How dem dey take use am",
  "url": "https://www.bbc.co.uk/usingthebbc/terms/",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 4`] = `
Object {
  "text": "As e concern BBC",
  "url": "https://www.bbc.co.uk/aboutthebbc",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 5`] = `
Object {
  "text": "Privacy Policy",
  "url": "https://www.bbc.co.uk/usingthebbc/privacy/",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.co.uk/usingthebbc/cookies/",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 7`] = `
Object {
  "text": "Call BBC",
  "url": "https://www.bbc.com/pidgin/institutional-42188215",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 9`] = `
Object {
  "text": "De way wey we de take go external link.",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 10`] = `
Object {
  "text": "BBC News, Pidgin",
  "url": "/pidgin",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 11`] = `
Object {
  "text": "Why you fit trust BBC News",
  "url": "https://www.bbc.com/pidgin/institutional-48528766",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 12`] = `
Object {
  "text": "How dem dey take use am",
  "url": "https://www.bbc.co.uk/usingthebbc/terms/",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 13`] = `
Object {
  "text": "As e concern BBC",
  "url": "https://www.bbc.co.uk/aboutthebbc",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 14`] = `
Object {
  "text": "Privacy Policy",
  "url": "https://www.bbc.co.uk/usingthebbc/privacy/",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 15`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.co.uk/usingthebbc/cookies/",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 16`] = `
Object {
  "text": "Call BBC",
  "url": "https://www.bbc.com/pidgin/institutional-42188215",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 17`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`Canonical Front Page Footer Link should match text and url 18`] = `
Object {
  "text": "De way wey we de take go external link.",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`Canonical Front Page Header I can see the branding 1`] = `"BBC News, Pidgin"`;

exports[`Canonical Front Page Header I can see the branding 2`] = `"BBC News, Pidgin"`;

exports[`Canonical Front Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "Page where you dey, Home",
  "url": "/pidgin",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "Nigeria",
  "url": "/pidgin/topics/3d5d5e30-dd50-4041-96d5-c970b20005b9",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Africa",
  "url": "/pidgin/topics/d2c2ba68-f9ad-4185-a6d1-7f6437256735",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "World",
  "url": "/pidgin/world",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "Video",
  "url": "/pidgin/media/video",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "Sport",
  "url": "/pidgin/topics/4063f80f-cccc-44c8-9449-5ca44e4c8592",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 7`] = `
Object {
  "text": "Entertainment",
  "url": "/pidgin/topics/1c3b60a9-14eb-484b-a750-9f5b1aeaac31",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 8`] = `
Object {
  "text": "Most popular",
  "url": "/pidgin/popular/read",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 9`] = `
Object {
  "text": "Page where you dey, Home",
  "url": "/pidgin",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 10`] = `
Object {
  "text": "Nigeria",
  "url": "/pidgin/topics/3d5d5e30-dd50-4041-96d5-c970b20005b9",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 11`] = `
Object {
  "text": "Africa",
  "url": "/pidgin/topics/d2c2ba68-f9ad-4185-a6d1-7f6437256735",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 12`] = `
Object {
  "text": "World",
  "url": "/pidgin/world",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 13`] = `
Object {
  "text": "Video",
  "url": "/pidgin/media/video",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 14`] = `
Object {
  "text": "Sport",
  "url": "/pidgin/topics/4063f80f-cccc-44c8-9449-5ca44e4c8592",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 15`] = `
Object {
  "text": "Entertainment",
  "url": "/pidgin/topics/1c3b60a9-14eb-484b-a750-9f5b1aeaac31",
}
`;

exports[`Canonical Front Page Header Navigation link should match text and url 16`] = `
Object {
  "text": "Most popular",
  "url": "/pidgin/popular/read",
}
`;

exports[`Canonical Front Page Index Alsos should match visually hidden text 1`] = `"Another thing we de for inside dis tori"`;

exports[`Canonical Front Page Index Alsos should match visually hidden text 2`] = `"Another thing we de for inside dis tori"`;

exports[`Canonical Front Page Main heading should match text 1`] = `"BBC News, Pidgin - Home"`;

exports[`Canonical Front Page Main heading should match text 2`] = `"BBC News, Pidgin - Home"`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/pidgin/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 11`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/pidgin/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 12`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 13`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 14`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 15`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 16`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 17`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 18`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 19`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Front Page SEO Apple Touch Icon should match attributes 20`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Front Page SEO Canonical link 1`] = `"http://localhost:7080/pidgin"`;

exports[`Canonical Front Page SEO Canonical link 2`] = `"http://localhost:7080/pidgin"`;

exports[`Canonical Front Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Front Page SEO Dir attribute 2`] = `"ltr"`;

exports[`Canonical Front Page SEO FB admins 1`] = `"100004154058350"`;

exports[`Canonical Front Page SEO FB admins 2`] = `"100004154058350"`;

exports[`Canonical Front Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Front Page SEO FB app ID 2`] = `"1609039196070050"`;

exports[`Canonical Front Page SEO Heading level 1 1`] = `"BBC News, Pidgin - Home"`;

exports[`Canonical Front Page SEO Heading level 1 2`] = `"BBC News, Pidgin - Home"`;

exports[`Canonical Front Page SEO Lang attribute 1`] = `"pcm"`;

exports[`Canonical Front Page SEO Lang attribute 2`] = `"pcm"`;

exports[`Canonical Front Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "WebPage",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/pidgin",
        "@type": "WebPage",
        "name": "Domot",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
          "width": 1024,
        },
        "name": "BBC News Pidgin",
        "publishingPrinciples": "https://www.bbc.com/pidgin/institutional-48528766",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
      "url": "http://localhost:7080/pidgin",
    },
  ],
}
`;

exports[`Canonical Front Page SEO Linked data should match text 2`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "WebPage",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/pidgin",
        "@type": "WebPage",
        "name": "Domot",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
          "width": 1024,
        },
        "name": "BBC News Pidgin",
        "publishingPrinciples": "https://www.bbc.com/pidgin/institutional-48528766",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
      "url": "http://localhost:7080/pidgin",
    },
  ],
}
`;

exports[`Canonical Front Page SEO OG description 1`] = `"We dey give una latest tori on top politics, environment, business, sports, entertainment, health, fashion and all di oda things wey dey happen for West and Central Africa come add di rest of di world join. For better informate plus explanation of all di ogbonge tori wey pipo never hear about for inside West and Central Africa, BBC Pidgin dey serve am with video, audio, maps and oda graphics join."`;

exports[`Canonical Front Page SEO OG description 2`] = `"We dey give una latest tori on top politics, environment, business, sports, entertainment, health, fashion and all di oda things wey dey happen for West and Central Africa come add di rest of di world join. For better informate plus explanation of all di ogbonge tori wey pipo never hear about for inside West and Central Africa, BBC Pidgin dey serve am with video, audio, maps and oda graphics join."`;

exports[`Canonical Front Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png"`;

exports[`Canonical Front Page SEO OG image 2`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png"`;

exports[`Canonical Front Page SEO OG image alt 1`] = `"BBC News Pidgin"`;

exports[`Canonical Front Page SEO OG image alt 2`] = `"BBC News Pidgin"`;

exports[`Canonical Front Page SEO OG locale 1`] = `"pcm"`;

exports[`Canonical Front Page SEO OG locale 2`] = `"pcm"`;

exports[`Canonical Front Page SEO OG site name 1`] = `"BBC News Pidgin"`;

exports[`Canonical Front Page SEO OG site name 2`] = `"BBC News Pidgin"`;

exports[`Canonical Front Page SEO OG title 1`] = `"Domot - BBC News Pidgin"`;

exports[`Canonical Front Page SEO OG title 2`] = `"Domot - BBC News Pidgin"`;

exports[`Canonical Front Page SEO OG type 1`] = `"website"`;

exports[`Canonical Front Page SEO OG type 2`] = `"website"`;

exports[`Canonical Front Page SEO OG url 1`] = `"http://localhost:7080/pidgin"`;

exports[`Canonical Front Page SEO OG url 2`] = `"http://localhost:7080/pidgin"`;

exports[`Canonical Front Page SEO Page title 1`] = `"Domot - BBC News Pidgin"`;

exports[`Canonical Front Page SEO Page title 2`] = `"Domot - BBC News Pidgin"`;

exports[`Canonical Front Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`Canonical Front Page SEO Robots meta tag 2`] = `"noodp,noydir"`;

exports[`Canonical Front Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Front Page SEO Twitter card 2`] = `"summary_large_image"`;

exports[`Canonical Front Page SEO Twitter creator 1`] = `"@BBCNews"`;

exports[`Canonical Front Page SEO Twitter creator 2`] = `"@BBCNews"`;

exports[`Canonical Front Page SEO Twitter description 1`] = `"We dey give una latest tori on top politics, environment, business, sports, entertainment, health, fashion and all di oda things wey dey happen for West and Central Africa come add di rest of di world join. For better informate plus explanation of all di ogbonge tori wey pipo never hear about for inside West and Central Africa, BBC Pidgin dey serve am with video, audio, maps and oda graphics join."`;

exports[`Canonical Front Page SEO Twitter description 2`] = `"We dey give una latest tori on top politics, environment, business, sports, entertainment, health, fashion and all di oda things wey dey happen for West and Central Africa come add di rest of di world join. For better informate plus explanation of all di ogbonge tori wey pipo never hear about for inside West and Central Africa, BBC Pidgin dey serve am with video, audio, maps and oda graphics join."`;

exports[`Canonical Front Page SEO Twitter image alt 1`] = `"BBC News Pidgin"`;

exports[`Canonical Front Page SEO Twitter image alt 2`] = `"BBC News Pidgin"`;

exports[`Canonical Front Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png"`;

exports[`Canonical Front Page SEO Twitter image src 2`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png"`;

exports[`Canonical Front Page SEO Twitter site 1`] = `"@BBCNews"`;

exports[`Canonical Front Page SEO Twitter site 2`] = `"@BBCNews"`;

exports[`Canonical Front Page SEO Twitter title 1`] = `"Domot - BBC News Pidgin"`;

exports[`Canonical Front Page SEO Twitter title 2`] = `"Domot - BBC News Pidgin"`;

exports[`Canonical Front Page Sections should match headline text 1`] = `"Top tori"`;

exports[`Canonical Front Page Sections should match headline text 2`] = `"Yarn Me Tori"`;

exports[`Canonical Front Page Sections should match headline text 3`] = `"Sport (click for more tori) See everitin"`;

exports[`Canonical Front Page Sections should match headline text 4`] = `"Ginger me"`;

exports[`Canonical Front Page Sections should match headline text 5`] = `"Informate me"`;

exports[`Canonical Front Page Sections should match headline text 6`] = `"Special reports 2"`;

exports[`Canonical Front Page Sections should match headline text 7`] = `"2018 World Cup"`;

exports[`Canonical Front Page Sections should match headline text 8`] = `"Podcast"`;

exports[`Canonical Front Page Sections should match headline text 9`] = `"Top tori"`;

exports[`Canonical Front Page Sections should match headline text 10`] = `"Yarn Me Tori"`;

exports[`Canonical Front Page Sections should match headline text 11`] = `"Sport (click for more tori) See everitin"`;

exports[`Canonical Front Page Sections should match headline text 12`] = `"Ginger me"`;

exports[`Canonical Front Page Sections should match headline text 13`] = `"Informate me"`;

exports[`Canonical Front Page Sections should match headline text 14`] = `"Special reports 2"`;

exports[`Canonical Front Page Sections should match headline text 15`] = `"2018 World Cup"`;

exports[`Canonical Front Page Sections should match headline text 16`] = `"Podcast"`;

exports[`Story Promo Headline should match text 1`] = `"AS E DE HAPPEN Senators don begin vote for Senate President"`;

exports[`Story Promo Image should match image 1`] = `
<img
  alt="Senator Ahmad Lawan and Ali Ndume"
  class="StyledImg-sc-7vx2mr-0 hIxkbt"
  sizes="(max-width: 600px) 100vw, (max-width: 1008px) 50vw, 496px"
  src="https://ichef.bbci.co.uk/news/660/cpsprodpb/16D8E/production/_107328539_ninthnationalassemblypidgin_senate_reps_1080.jpg"
  srcset="https://ichef.bbci.co.uk/news/70/cpsprodpb/16D8E/production/_107328539_ninthnationalassemblypidgin_senate_reps_1080.jpg 70w, https://ichef.bbci.co.uk/news/95/cpsprodpb/16D8E/production/_107328539_ninthnationalassemblypidgin_senate_reps_1080.jpg 95w, https://ichef.bbci.co.uk/news/144/cpsprodpb/16D8E/production/_107328539_ninthnationalassemblypidgin_senate_reps_1080.jpg 144w, https://ichef.bbci.co.uk/news/183/cpsprodpb/16D8E/production/_107328539_ninthnationalassemblypidgin_senate_reps_1080.jpg 183w, https://ichef.bbci.co.uk/news/240/cpsprodpb/16D8E/production/_107328539_ninthnationalassemblypidgin_senate_reps_1080.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsprodpb/16D8E/production/_107328539_ninthnationalassemblypidgin_senate_reps_1080.jpg 320w, https://ichef.bbci.co.uk/news/660/cpsprodpb/16D8E/production/_107328539_ninthnationalassemblypidgin_senate_reps_1080.jpg 660w"
  width="976"
/>
`;
